[project]
name = "pirosity"
version = "0.1.0-dev"
description = "ROS2 experiments on a Raspberry Pi"
authors = [
    { name = "Carlos Fernando Baptista", email = "cfd.baptista@gmail.com" },
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = ["gpiozero>=1.6.2"]

[project.optional-dependencies]
dev = ["isort>=6.0.0", "pytest>=8.3.4", "ruff>=0.9.3"]

[tool.isort]
profile = "black"
line_length = 100
indent = "    "
skip = ["build", "dist", ".git", ".github", ".venv", ".vscode", "__pycache__"]

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py312"
exclude = [
    "build",
    "dist",
    ".git",
    ".github",
    ".venv",
    ".vscode",
    "__pycache__",
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
